A lot of API cleanup.

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ junit5_version=1.2.0
 jupiterVersion=5.2.0
 argJvmDefault=-Xjvm-default=enable
 androidTarget=28
-validatorVersion=0.6.0
+validatorVersion=0.6.0-SNAPSHOT
 xmlutil_version=0.82.1-SNAPSHOT
 xmlutil_core_version=0.82.1-SNAPSHOT
 xmlutil_serial_version=0.82.1-SNAPSHOT
