Add a bundled snapshot of the binary compatibility validator (with updated plugin code) that allows the binary compatibility to be in dev while the binary compatibility plugin is not updated to support this.

--- a/buildSrc/settings.gradle
+++ b/buildSrc/settings.gradle
@@ -20,6 +20,10 @@
 
 pluginManagement {
     repositories {
+        maven {
+            name = "Bundled maven"
+            url = file("mavenBundled").toURI()
+        }
         mavenLocal()
         gradlePluginPortal()
         mavenCentral()
